make home and about responsive

--- a/assets/styles/scss/_variables.scss
+++ b/assets/styles/scss/_variables.scss
@@ -9,4 +9,8 @@ $green: #23CB23;
 $blue: #71AAEA;
 $peach: #F97583;
 $purple: #B392F0;
-$stone: #323232
+$stone: #323232;
+
+
+$t-duration: 800ms;
+$t-delay: 300ms;
